--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -6,3 +6,14 @@
 .cool {
     font-size: 24px;
 }
+
+#one {
+    color: blue;
+    font-size: 36px;
+}
+
+#another {
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
